Conver prediction to cpu mode

--- a/notebooks/Sample_prediction.ipynb
+++ b/notebooks/Sample_prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -20,30 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "sys.path.append('../')"
+    "sys.path.append('../')\n",
+    "sys.path.insert(0, '../models/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using gpu device 1: GeForce GTX 960 (CNMeM is disabled)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cPickle as pickle\n",
     "import re\n",
@@ -61,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -72,19 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab inline\n",
     "\n",
@@ -96,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -137,29 +122,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(64, 64, 3, 3)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "param_model_data[8].shape"
+    "param_model_data[-1].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import basic_model as model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "l_out, l_ins = model.build_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nn.layers.set_all_param_values(l_out, param_model_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model_data_store = {}\n",
+    "model_data_store['chunk_size'] = model_data['chunk_size']\n",
+    "model_data_store['batch_size'] = model_data['batch_size']\n",
+    "model_data_store['data_loader_params'] = model_data['data_loader_params']\n",
+    "model_data_store['paired_transfos'] = model_data['paired_transfos']\n",
+    "print model_data.has_key('data_loader_no_transfos')\n",
+    "print model_data.has_key('data_loader_default_transfo_params')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "extra_param_dump_path = '../dumps/2015_07_17_123003_EXTRAS.pkl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pickle.dump(model_data_store, open(extra_param_dump_path, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -170,9 +225,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -181,7 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model_data['batch_size']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -201,68 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   0  InputLayer                   (64, 3, 512, 512)  \n",
-      "   1  Conv2DDNNLayer               (64, 32, 256, 256)  7 //2\n",
-      "   2  MaxPool2DDNNLayer            (64, 32, 127, 127)  3 //2\n",
-      "   3  Conv2DDNNLayer               (64, 32, 127, 127)  3 //1\n",
-      "   4  Conv2DDNNLayer               (64, 32, 127, 127)  3 //1\n",
-      "   5  MaxPool2DDNNLayer            (64, 32, 63, 63)  3 //2\n",
-      "   6  Conv2DDNNLayer               (64, 64, 63, 63)  3 //1\n",
-      "   7  Conv2DDNNLayer               (64, 64, 63, 63)  3 //1\n",
-      "   8  MaxPool2DDNNLayer            (64, 64, 31, 31)  3 //2\n",
-      "   9  Conv2DDNNLayer               (64, 128, 31, 31)  3 //1\n",
-      "  10  Conv2DDNNLayer               (64, 128, 31, 31)  3 //1\n",
-      "  11  Conv2DDNNLayer               (64, 128, 31, 31)  3 //1\n",
-      "  12  Conv2DDNNLayer               (64, 128, 31, 31)  3 //1\n",
-      "  13  MaxPool2DDNNLayer            (64, 128, 15, 15)  3 //2\n",
-      "  14  Conv2DDNNLayer               (64, 256, 15, 15)  3 //1\n",
-      "  15  Conv2DDNNLayer               (64, 256, 15, 15)  3 //1\n",
-      "  16  Conv2DDNNLayer               (64, 256, 15, 15)  3 //1\n",
-      "  17  Conv2DDNNLayer               (64, 256, 15, 15)  3 //1\n",
-      "  18  MaxPool2DDNNLayer            (64, 256, 7, 7)  3 //2\n",
-      "  19  DropoutLayer                 (64, 256, 7, 7)   [0.50]\n",
-      "  20  DenseLayer                   (64, 1024)  \n",
-      "  21  FeaturePoolLayer             (64, 512)  2 //\n",
-      "  22  InputLayer                   (64, 2)  \n",
-      "  23  ConcatLayer                  (64, 514)  \n",
-      "  24  ReshapeLayer                 (32, 1028)  \n",
-      "  25  DropoutLayer                 (32, 1028)   [0.50]\n",
-      "  26  DenseLayer                   (32, 1024)  \n",
-      "  27  FeaturePoolLayer             (32, 512)  2 //\n",
-      "  28  DropoutLayer                 (32, 512)   [0.50]\n",
-      "  29  DenseLayer                   (32, 10)  \n",
-      "  30  ReshapeLayer                 (64, 5)  \n",
-      "  31  ApplyNonlinearity            (64, 5)  \n",
-      "\n",
-      "Number of parameters: 20923690.\n",
-      "\n",
-      "BEST/LAST KAPPA TRAIN: 0.851 - 0.851.\n",
-      "BEST/LAST KAPPA VALID: 0.829 - 0.827.\n",
-      "\n",
-      "BEST/LAST ACC TRAIN: 84.79 - 84.48.\n",
-      "BEST/LAST ACC VALID: 83.58 - 83.47.\n",
-      "\n",
-      "TOTAL TRAINING TIME: 79:30:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/arya_03/.envs/kag_dr/local/lib/python2.7/site-packages/lasagne/layers/helper.py:69: UserWarning: get_all_layers() has been changed to return layers in topological order. The former implementation is still available as get_all_layers_old(), but will be removed before the first release of Lasagne. To ignore this warning, use `warnings.filterwarnings('ignore', '.*topo.*')`.\n",
-      "  warnings.warn(\"get_all_layers() has been changed to return layers in \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_arch = architecture_string(model_data['l_out'])\n",
     "# model_arch = ''\n",
@@ -337,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -363,23 +372,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.715  0.04   0.027  0.     0.   ]\n",
-      " [ 0.014  0.016  0.008  0.     0.   ]\n",
-      " [ 0.011  0.016  0.078  0.002  0.001]\n",
-      " [ 0.     0.     0.03   0.02   0.001]\n",
-      " [ 0.     0.     0.003  0.001  0.016]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Normalised train confusion matrix (with argmax decoding).\n",
     "print train_conf_mat / train_conf_mat.sum()"
@@ -387,23 +384,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.704  0.042  0.028  0.001  0.001]\n",
-      " [ 0.011  0.016  0.008  0.     0.   ]\n",
-      " [ 0.015  0.013  0.085  0.005  0.003]\n",
-      " [ 0.     0.     0.029  0.017  0.004]\n",
-      " [ 0.001  0.     0.003  0.002  0.014]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Normalised validation confusion matrix (with argmax decoding).\n",
     "print valid_conf_mat / valid_conf_mat.sum()"
@@ -427,20 +412,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch size: 64.\n",
-      "Chunk size: 256.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chunk_size = model_data['chunk_size'] * 2\n",
     "batch_size = model_data['batch_size']\n",
@@ -451,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -478,19 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Do transformations per patient instead?\n",
     "if 'paired_transfos' in model_data:\n",
@@ -503,22 +471,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<CudaNdarrayType(float32, 4D)>, <CudaNdarrayType(float32, matrix)>]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xs_shared"
    ]
@@ -597,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -608,23 +565,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'patient_ids' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-34-04af54f33557>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdata_loader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mnew_dataloader_params\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'data_loader_params'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mnew_dataloader_params\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'images_test'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mpatient_ids\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mnew_dataloader_params\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'labels_test'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mnew_dataloader_params\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'prefix_train'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mimg_dir\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'patient_ids' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_loader = DataLoader()\n",
     "new_dataloader_params = model_data['data_loader_params']\n",
@@ -685,19 +630,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'extra_width_crop': True, 'rotation_before_resize': False, 'crop_height': False, 'resize_pad': False, 'keep_aspect_ratio': False}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "no_transfo_params = model_data['data_loader_params']['no_transfo_params']\n",
     "\n",
